# sgfixedincome_pkg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  update-badge.yml
docs/: Makefile  conf.py  index.md  make.bat  vignette.ipynb
docs/autoapi/: index.rst
docs/autoapi/sgfixedincome_pkg/: index.rst
docs/vignettes/: vignette_main.ipynb  vignette_mas.ipynb  vignette_scraper.ipynb
src/sgfixedincome_pkg/: __init__.py  analysis.py  cli.py  consolidate.py  equations.py  mas_api_client.py  scraper.py
src/sgfixedincome_pkg/streamlit_app/: app.py
src/sgfixedincome_pkg/streamlit_app/.streamlit/: secrets.toml
tests/: test_analysis.py  test_consolidate.py  test_equations.py  test_mas_api_client.py  test_scraper.py
